--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "test": "react-scripts test",
-    "start": "node index.js",
+    "start": "node app.js",
     "dev": "nodemon"
   },
   "eslintConfig": {
